[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarttrade-ai"
version = "2.0.0"
description = "Advanced AI-powered trading analysis system with 500+ stocks and 50+ technical indicators"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mani Rastegari", email = "mani.rastegari@gmail.com"}
]
maintainers = [
    {name = "Mani Rastegari", email = "mani.rastegari@gmail.com"}
]
keywords = [
    "trading",
    "stock analysis", 
    "technical analysis",
    "fundamental analysis",
    "machine learning",
    "artificial intelligence",
    "finance",
    "investment",
    "yfinance",
    "streamlit",
    "free",
    "open source"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Environment :: Web Environment",
    "Framework :: Streamlit",
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.18",
    "plotly>=5.17.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "textblob>=0.17.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/smarttrade-ai"
Documentation = "https://github.com/yourusername/smarttrade-ai#readme"
Repository = "https://github.com/yourusername/smarttrade-ai"
"Bug Tracker" = "https://github.com/yourusername/smarttrade-ai/issues"

[project.scripts]
smarttrade = "simple_trading_analyzer:main"
smarttrade-enhanced = "enhanced_trading_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
